Incluídos cards na primeira página. Incluído o texto 'O Homem Olhando o Mar' no Blog.

--- a/blog.html
+++ b/blog.html
@@ -49,6 +49,26 @@
     </div>
   </nav>
   <div class="container">
+    <p class="blocktext">Campo Grande, 6 de abril de 2021</p>
+    <h3 class="blog">Homem Olhando o Mar</h3>
+    <p class="blocktext">Ela carregava a pasta contra o peito, e caminhava com estudada displic&ecirc;ncia ― o que, de certo modo, disfar&ccedil;ava a deseleg&acirc;ncia do uniforme. Deu uma corridinha para atravessar a rua e depois se compenetrou, tentando fazer-se adulta. Logo se distra&iacute;a, de vitrine em vitrine, com seu pr&oacute;prio corpo que passava, refletido no vidro ― &agrave;s vezes estacando para olhar um vestido, uma bolsa, um sapato. B&aacute;rbaro, murmurava.&nbsp;</p>
+    <p class="blocktext">Na esquina se deteve junto &agrave; carrocinha de sorvete:&nbsp;</p>
+    <p class="blocktext">― De chocolate.</p>
+    <p class="blocktext">A m&atilde;e era capaz de dizer que n&atilde;o ficava bem uma mo&ccedil;a de 13 anos tomando sorvete pela rua afora. Ainda mais nesse passinho saltitante, evitando as listas pretas da cal&ccedil;ada, s&oacute; pisando nas brancas. Pouco se importava: muita coisa que n&atilde;o ficava bem ela gostava de fazer. Por exemplo: tirar o sapato ali mesmo e andar descal&ccedil;a, dava vontade. Outro exemplo: matar a &uacute;ltima aula, pois n&atilde;o era isso mesmo?&nbsp;</p>
+    <p class="blocktext">Sorvete acabado, ficou pensando se agora n&atilde;o seria o caso de comprar um saco de pipocas. Enquanto decidia, olhava os cartazes de cinema. Por um instante teve a tenta&ccedil;&atilde;o de entrar. Isto &eacute;, se o dinheiro desse. Isto &eacute;, se desse tempo. Isto &eacute;, se j&aacute; n&atilde;o tivesse visto aquele filme.&nbsp;</p>
+    <p class="blocktext">― Amanh&atilde; vou pedir ao papai ― afirmou, como se falasse para o pr&oacute;prio sapatinho branco na vitrine, logo adiante: b&aacute;rbaro tamb&eacute;m. O pai naquele instante na cidade, trabalhando no escrit&oacute;rio. O que eu estou precisando &eacute; de tomar ju&iacute;zo, concluiu. Mas, francamente: s&oacute; a &uacute;ltima aula. Ainda mais numa tarde t&atilde;o bonita como aquela. Virou a esquina e seguiu em dire&ccedil;&atilde;o ao mar.&nbsp;</p>
+    <p class="blocktext">O mar. Ondas que se quebravam l&aacute; adiante, espumando verde. Ao longe, cruzando a barra, um navio branco. O azul do c&eacute;u sem uma nuvem, a areia dourada. Foi andando devagar ao longo da praia, passo a passo, reconciliada com o mundo, leve, distra&iacute;da, olhando o mar.&nbsp;</p>
+    <p class="blocktext">De repente estacou, surpresa: num dos bancos, logo adiante, um homem tamb&eacute;m olhando o mar.&nbsp;</p>
+    <p class="blocktext">Um homem alto como seu pai, meio curvado como seu pai, olhando o mar. Mas &agrave;quela hora, sentado sozinho num banco de praia, palet&oacute; largado ao colo, olhando o mar?&nbsp;</p>
+    <p class="blocktext">Virou rapidamente o rosto, porque ele se movera e j&aacute; podia t&ecirc;-la visto. Deu-lhe as costas e atravessou a rua, aturdida com a descoberta: ele tamb&eacute;m matava aula para ficar olhando o mar.&nbsp;</p>
+    <p class="blocktext">Antes de desaparecer na esquina, arriscou ainda um olhar furtivo, para confirmar: l&aacute; est&aacute; ele. Teve a impress&atilde;o de que agora ele &eacute; que virava o rosto, para n&atilde;o ser reconhecido. Por via das d&uacute;vidas, foi logo para casa.&nbsp;</p>
+    <p class="blocktext">J&aacute; era tempo mesmo: chegou &agrave; hora de sempre.&nbsp;</p>
+    <p class="blocktext">&Agrave; noite, ele chegou tamb&eacute;m &agrave; hora de sempre. E durante o jantar, a uma pergunta da mulher, enfrentou a fam&iacute;lia com o costumeiro sorriso de cansa&ccedil;o:&nbsp;</p>
+    <p class="blocktext">― Tive um dia atarefad&iacute;ssimo, hoje.&nbsp;</p>
+    <p class="blocktext">Olhou a filha, meio ressabiado, mas ela j&aacute; lhe devolvia o olhar, com ternura. Uma ternura de c&uacute;mplice.</p>
+    <p class="blocktext">Fernando Sabino, in: A Inglesa Deslumbrada. Rio de Janeiro, Sabiá. 1967, pp. 7-9.<br>Fonte: https://cronicabrasileira.org.br/cronicas/13162/homem-olhando-o-mar</p>
+    <hr>
+    <p class="blocktext">Campo Grande, 16 de fevereiro de 2021</p>
     <h3 class="blog">Como melhorar a sua redação</h3>
     <p class="blocktext">Oi galera! Vocês sabiam que as notas de redação são as mais baixas dentre todas as matérias?
       Isso ocorre não apenas no nosso Estado, Mato Grosso do Sul, mas em todos os estados do país, pois não temos o
