--- a/index.html
+++ b/index.html
@@ -125,10 +125,56 @@
     <div class="container-fluid padding">
         <div class="row text-center padding">
             <div class="col-12">
-                <h5>Vídeos em alta</h5>
+                <h6>Vídeos em alta</h6>
             </div>
         </div>
         <div class="row text-center padding">
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="card text-white bg-success">
+                    <iframe src="https://www.youtube.com/embed/oXKx0_BZmmc" title="Preparatório IFMS" frameborder="0" allow="accelerometer; 
+                    autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Preparatório IFMS</h6>
+                        <p class="card-text"> Aula de Matemática <br><br> CMCG | Porcentagem</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="card text-white bg-warning">
+                    <iframe src="https://www.youtube.com/embed/rZDxin0oahg" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Preparatório CM</h6>
+                        <p class="card-text"> Aula de Língua Portuguesa <br><br> CMB 2018/2019 | Correção de Prova <br><br>Turma Avançada</p>
+                        <!-- <a href="#" class="btn btn-primary">Ver vídeo</a> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="card text-white bg-primary">
+                    <iframe src="https://www.youtube.com/embed/3eZgDrWFbiw" title="Preparatório Colégio Militar" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Preparatório CM</h6>
+                        <p class="card-text"> Aula de Matemática <br><br> CMF 2020/2021 | Correção de Prova <br><br>Turma Iniciante</p>
+                        <!-- <a href="#" class="btn btn-primary">Ver vídeo</a> -->
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="card text-white bg-info">
+                    <iframe src="https://www.youtube.com/embed/rZDxin0oahg" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Preparatório CM</h6>
+                        <p class="card-text"> CMB 2018/2019 | Correção de Prova</p>
+                        <!-- <a href="#" class="btn btn-primary">Ver vídeo</a> -->
+                    </div>
+                </div>
+            </div>
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <!-- GRADE 1 -->
                 <iframe width="250" height="160" src="https://www.youtube.com/embed/6zc-dNRLk5U" frameborder="0"
