--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
     <p class="blocktext">― Tive um dia atarefad&iacute;ssimo, hoje.&nbsp;</p>
     <p class="blocktext">Olhou a filha, meio ressabiado, mas ela j&aacute; lhe devolvia o olhar, com ternura. Uma ternura de c&uacute;mplice.</p>
     <p class="blocktext">Fernando Sabino, in: A Inglesa Deslumbrada. Rio de Janeiro, Sabiá. 1967, pp. 7-9.</p>
-    <p class="blocktext">Fonte: https://cronicabrasileira.org.br/cronicas<br>/13162/homem-olhando-o-mar</p>
+    <p class="blocktext">Fonte: https://cronicabrasileira.org.br/ cronicas/13162/homem-olhando-o-mar</p>
     <hr>
     <p class="blocktext">Campo Grande, 16 de fevereiro de 2021</p>
     <h3 class="blog">Como melhorar a sua redação</h3>
