--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             </div>
         </div>
         <div class="row text-center padding">
+            <!-- VÍDEO 1 -->
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <div class="card text-white bg-success">
                     <iframe src="https://www.youtube.com/embed/oXKx0_BZmmc" title="Preparatório IFMS" frameborder="0" allow="accelerometer; 
@@ -139,6 +140,7 @@
                     </div>
                 </div>
             </div>
+            <!-- VÍDEO 2 -->
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <div class="card text-white bg-warning">
                     <iframe src="https://www.youtube.com/embed/rZDxin0oahg" frameborder="0"
@@ -147,108 +149,130 @@
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
                         <p class="card-text"> Aula de Língua Portuguesa <br><br> CMB 2018/2019 | Correção de Prova <br><br>Turma Avançada</p>
-                        <!-- <a href="#" class="btn btn-primary">Ver vídeo</a> -->
                     </div>
                 </div>
             </div>
+            <!-- VÍDEO 3 -->
             <div class="col-xs-12 col-sm-6 col-md-3">
-                <div class="card text-white bg-primary">
+                <div class="card text-black bg-light">
                     <iframe src="https://www.youtube.com/embed/3eZgDrWFbiw" title="Preparatório Colégio Militar" 
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
-                gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                    gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
                         <p class="card-text"> Aula de Matemática <br><br> CMF 2020/2021 | Correção de Prova <br><br>Turma Iniciante</p>
-                        <!-- <a href="#" class="btn btn-primary">Ver vídeo</a> -->
                     </div>
                 </div>
             </div>
+            <!-- VÍDEO 4 -->
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div class="card text-white bg-primary">
+                    <iframe src="https://www.youtube.com/embed/Cjad9jRpkdQ" title="África - Ensino Médio"
+                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                     gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">África - Ensino Médio</h6>
+                        <p class="card-text"> Aula de Matemática <br><br> Funções</p>
+                    </div>
+                </div>
+            </div>
+            <!-- VÍDEO 5 -->
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <div class="card text-white bg-info">
-                    <iframe src="https://www.youtube.com/embed/rZDxin0oahg" frameborder="0"
+                    <iframe src="https://www.youtube.com/embed/6zc-dNRLk5U" title="Preparatório Colégio Militar"
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                    gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Preparatório CM</h6>
+                        <p class="card-text">Aula de Matemática <br><br> CMB 2018/2019 | Correção de Prova <br><br>Turma Avançada</p>
+                    </div>
+                </div>
+            </div>
+            <!-- VÍDEO 6 -->
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div  class="card text-white bg-primary">
+                    <iframe src="https://www.youtube.com/embed/PbDJQtxFi-s" title="África - Ensino Médio" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                    gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">África - Ensino Médio</h6>
+                        <p class="card-text">Aula de Matemática</p>
+                    </div>
+                </div>
+            </div>
+            <!-- VÍDEO 7 -->
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div  class="card text-white bg-danger">
+                    <iframe src="https://www.youtube.com/embed/nPtRR9Slzow" title="Agradecimento" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                    gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Agradecimento</h6>
+                        <p class="card-text">Fernanda | EGO - 7º Ano</p>
+                    </div>
+                </div>
+            </div>
+            <!-- VÍDEO 8 -->
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div  class="card text-white bg-info">
+                    <iframe src="https://www.youtube.com/embed/f6-jGupzNjw" title="Preparatório Colégio Militar" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                    gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Preparatório CM</h6>
+                        <p class="card-text">Aula de Matemática <br><br> CMBEL 18/19 | Correção de Prova <br><br>Turma Avançada</p>
+                    </div>
+                </div>
+            </div>
+            <!-- VÍDEO 9 -->
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div  class="card text-white bg-info">
+                    <iframe src="https://www.youtube.com/embed/Ven0P1DE348" title="Preparatório Colégio Militar" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                    gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Preparatório CM</h6>
+                        <p class="card-text">Aula de Matemática <br><br> CMCG 19/20 | Correção de Prova <br><br>Turma Avançada</p>
+                    </div>
+                </div>
+            </div>
+            <!-- VÍDEO 10 -->
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div  class="card text-white bg-danger">
+                    <iframe src="https://www.youtube.com/embed/QM_7m7xws4Y" title="Agradecimento" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                    gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Agradecimento</h6>
+                        <p class="card-text">Leia (Mãe da Ana Beatriz) | EGO - 6º Ano</p>
+                    </div>
+                </div>
+            </div>
+            <!-- VÍDEO 11 -->
+            <div class="col-xs-12 col-sm-6 col-md-3">
+                <div  class="card text-white bg-info">
+                    <iframe src="https://www.youtube.com/embed/tPZ7XA9hdfA" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Preparatório CM</h6>
-                        <p class="card-text"> CMB 2018/2019 | Correção de Prova</p>
-                        <!-- <a href="#" class="btn btn-primary">Ver vídeo</a> -->
+                        <p class="card-text">Aula de Matemática <br><br> CMF 2018/2019 | Correção de Prova <br><br>Turma Avançada</p>
                     </div>
                 </div>
             </div>
+            <!-- VÍDEO 12 -->
             <div class="col-xs-12 col-sm-6 col-md-3">
-                <!-- GRADE 1 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/6zc-dNRLk5U" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-                <h6>Preparatório Colégio Militar</h6>
-                <h6>Questão Resolvida</h6>
-                <p>Matemática | CMB 2018/2019 | Q1</p>
-            </div><!--  width="250" height="160" -->
-            <div  class="col-xs-12 col-sm-6 col-md-3">
-                <!-- GRADE 2 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/w4WxH5rU1uM" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-                <h6>Preparatório IFMS</h6>
-                <h6>Moçambique | 26/11/2020 às 7h</h6>
-                <p>Matemática | Prof.º Paulo</p>
-            </div>
-            <div  class="col-xs-12 col-sm-6 col-md-3">
-                <!-- GRADE 3 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/nPtRR9Slzow" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-                <h6>Agradecimento</h6>
-                <h6>Fernanda | EGO - 7º Ano</h6>
-                <p>26/11/2020 às 10h</p>
-            </div>
-            <div  class="col-xs-12 col-sm-6 col-md-3">
-                <!-- GRADE 4 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/f6-jGupzNjw" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-                <h6>Preparatório Colégio Militar</h6>
-                <h6>Questão Resolvida</h6>
-                <p>Matemática | CMBEL 2018/2019 | Q1</p>
-            </div>
-            <div  class="col-xs-12 col-sm-6 col-md-3">
-                <!-- GRADE 5 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/Ven0P1DE348" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-                <h6>Preparatório Colégio Militar</h6>
-                <h6>Questão Resolvida</h6>
-                <p>Matemática | CMCG 2019/2020 | Q1</p>
-            </div>
-            <div  class="col-xs-12 col-sm-6 col-md-3">
-                <!-- GRADE 6 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/QM_7m7xws4Y" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-                <h6>Agradecimento</h6>
-                <h6>Leia (Mãe da Ana Beatriz) | EGO - 6º Ano</h6>
-                <p>2 de dezembro de 2020</p>
-            </div>
-            <div  class="col-xs-12 col-sm-6 col-md-3">
-                <!-- GRADE 7 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/tPZ7XA9hdfA" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-                <h6>Preparatório Colégio Militar</h6>
-                <h6>Questão Resolvida</h6>
-                <p>Matemática | CMF 2018/2019 | Q1</p>
-            </div>
-            <div  class="col-xs-12 col-sm-6 col-md-3">
-                <!-- GRADE 8 -->
-                <iframe width="250" height="160" src="https://www.youtube.com/embed/GYKhriPfeFQ" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-                <h6>Preparatório IFMS</h6>
-                <h6>Aula de Português | IF</h6>
-                <p>26/11/2020 às 10h</p>
+                <div  class="card text-white bg-success">
+                    <iframe src="https://www.youtube.com/embed/GYKhriPfeFQ" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                    <div class="card-body">
+                        <h6 class="card-title">Preparatório IFMS</h6>
+                        <p class="card-text">Aula de Língua Portuguesa <br><br> Interpretação de Texto</p>
+                    </div>
+                </div>
             </div>
         </div>
-
         <hdr></hdr>
         <!-- Footer -->
         <footer>
