Incluída Playlist do CMRJ 2012/2013 de Matemática no canal Turma Avançada.

--- a/turmaavancada.html
+++ b/turmaavancada.html
@@ -52,11 +52,63 @@
     <div class="row text-center padding">
       <div class="col-12">
           <h4>Preparatório CM - Turma Avançada</h4>
-          <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube">
+          <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube.">
               <i class="fab fa-youtube"></i></a>
       </div>
     </div>
     <div class="row text-center padding">
+      <!-- CMRJ -->
+      <div class="col-12">
+        <a href="https://youtube.com/playlist?list=PLrQK3kaiCHkFkWbJxn4ilYs680h0QDMpb" target="_blank" title="Clique aqui para acessar a Playlist no YouTube."><h5>Aulas de Matemática | Correção de Prova | CMRJ</h5></a>
+      </div>
+      <!-- Vídeo 1 -->
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="card text-white bg-info">
+          <iframe src="https://www.youtube.com/embed/nQdOuhk09GI" title="Preparatório Colégio Militar" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+          gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="card-body">
+            <h6 class="card-title">Preparatório CM</h6>
+            <p class="card-text">Aula de Matemática <br><br> CMRJ 12/13 | Correção de Prova <br><br>Questão 01</p>
+          </div>
+        </div>
+      </div>
+      <!-- Vídeo 2 -->
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="card text-white bg-info">
+          <iframe src="https://www.youtube.com/embed/hdYHn_Mjfno" title="Preparatório Colégio Militar" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+          gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="card-body">
+            <h6 class="card-title">Preparatório CM</h6>
+            <p class="card-text">Aula de Matemática <br><br> CMRJ 12/13 | Correção de Prova <br><br>Questão 02</p>
+          </div>
+        </div>
+      </div>
+      <!-- Vídeo 3 -->
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="card text-white bg-info">
+          <iframe src="https://www.youtube.com/embed/gyUJ9zrOMFA" title="Preparatório Colégio Militar" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+          gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="card-body">
+            <h6 class="card-title">Preparatório CM</h6>
+            <p class="card-text">Aula de Matemática <br><br> CMRJ 12/13 | Correção de Prova <br><br>Questão 03</p>
+          </div>
+        </div>
+      </div>
+      <!-- Vídeo 4 -->
+      <div class="col-xs-12 col-sm-6 col-md-3">
+        <div class="card text-white bg-info">
+          <iframe src="https://www.youtube.com/embed/_VAAYk6a5Qk" title="Preparatório Colégio Militar" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+          gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="card-body">
+            <h6 class="card-title">Preparatório CM</h6>
+            <p class="card-text">Aula de Matemática <br><br> CMRJ 12/13 | Correção de Prova <br><br>Questão 04</p>
+          </div>
+        </div>
+      </div>
       <div class="col-12">
         <h5>Aulas de Matemática | Correção de Prova | CMR</h5>
       </div>
