Alterado o nome do canal Ensino Religioso para Vídeos Fraternos.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="africa.html">África - Ensino Médio</a>
                     </li>
                     <li>
-                        <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
+                        <a class="nav-link" href="videos-fraternos.html">Vídeos Fraternos</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h3>Vídeos Fraternos</h3>
-                    <a href="ensino-religioso.html" class="btn btn-primary btn-sm" role="button" title="Clique aqui">VER VÍDEOS</a>
+                    <a href="videos-fraternos.html" class="btn btn-primary btn-sm" role="button" title="Clique aqui">VER VÍDEOS</a>
                 </div>
             </div>
         </div>
