--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="africa.html">África - Ensino Médio</a>
           </li>
           <li>
-            <a class="nav-link" href="ensino-religioso.html">Vídeos Fraternos</a>
+            <a class="nav-link" href="videos-fraternos.html">Vídeos Fraternos</a>
           </li>
         </ul>
       </div>
