--- a/quem-somos.html
+++ b/quem-somos.html
@@ -48,8 +48,24 @@
       </div>
     </div>
   </nav>
-  <div class="grid-container">
-    <h1>EM DESENVOLVIMENTO</h1>
+  <div class="container">
+    <h6 class="blog">Quem Somos</h6>
+    <p class="blocktext">O <i>Instituto Ser Integral</i> é uma associação civil sem fins lucrativos, com sede em Campo Grande.</p>
+    <p class="blocktext">Temos como objetivo a promoção social e educacional da população de baixa renda, mediante a adoção de iniciativas capazes de propiciar seu acesso a meios educacionais de melhor qualidade</p>
+    <p class="blocktext">O Instituto Ser Integral tem como objetivos maiores e finais:</p>
+      <ol class="blocktext">
+        <li class="blocktext">Promover programas e ações de promoção social;</li>
+        <li class="blocktext">Promover programas sociais;</li>
+        <li class="blocktext">Promover o voluntariado;</li>
+        <li class="blocktext">A participação na elaboração de políticas públicas e na legislação sobre educação pública;</li>
+        <li class="blocktext">Celebrar convênios, contratos, acordos e ajustes com instituições públicas ou privadas, nacionais ou internacionais visando a promoção de ações de promoção social e acesso à educação de qualidade;</li>
+        <li class="blocktext">Promover ações, programas e atividades direcionadas a consecução dos objetivos constantes deste Estatuto;</li>
+        <li class="blocktext">Divulgação da Doutrina Espírita por meio de todos os veículos de comunicação social compatíveis com os princípios ético-morais espíritas.</li>
+      </ol>
+    <p class="blocktext">A Associação não distribui, entre seus associados, conselheiros, diretores, empregados ou doadores eventuais excedentes operacionais, brutos ou líquidos, dividendos, bonificações, participações ou parcelas do seu patrimônio, auferidos mediante o exercício de suas atividades, e os aplica integralmente na consecução do seu objetivo social.</p>
+    <p class="blocktext">No desenvolvimento de suas atividades, a Associação observará os princípios da legalidade, impessoalidade, moralidade, publicidade, economicidade e da eficiência e não fará qualquer discriminação de raça, gênero, cor, opção sexual ou religião.</p>
+    <h6 class="signature">Instituto Ser Integral</h6>
+    <h6 class="signature">Conselho Diretor</h6>
   </div>
 </body>
 
