Preenchidas as informações do 'Ajuda' (FAQ).

--- a/ajuda.html
+++ b/ajuda.html
@@ -48,8 +48,59 @@
       </div>
     </div>
   </nav>
-  <div class="grid-container">
-    <h1>EM DESENVOLVIMENTO</h1>
+  <div class="container">
+    <h6 class="blog"><FAQ>Ajuda - FAQ*</FAQ></h6>
+    <ol class="blocktext">
+      <li class="blocktext"><b>Qual o dia e horário das Aulas?</b></li>
+        <p class="blocktext"><i>Há aulas na segunda, quarta e sexta-feira. No Mato Grosso do Sul (MS), as aulas começam às 7h e terminam às 10h40min.
+        </i></p>
+        <p class="blocktext"><i>Para o horário de Brasília (BSB), serão das 8h às 11h40min.</i></p>
+        <p class="blocktext"><i>No período Vespertino, as aulas vão das 13h às 16h40min, no MS, e das 14h às 17h40min em BSB, sempre às segundas, quartas e sextas-feiras.</i></p>
+        <p class="blocktext"><i>No total, são 5 (cinco) tempos de aula de 40 (quarenta) minutos, cada uma.</i></p>
+      <li class="blocktext"><b>Estas aulas são gratuitas?</b>
+        <p class="blocktext"><i>Sim. São gratuitas.</i></p>
+      </li>
+      <li class="blocktext"><b>Quando começam as aulas?</b>
+        <p class="blocktext"><i>Dia 1º de Março de 2021.</i></p>
+      </li>
+      <li class="blocktext"><b>Como serão estas aulas?</b>
+        <p class="blocktext"><i>As aulas serão acessadas pelos links - colocados nos grupos do WhatsApp - dos aplicativos Meet ou Zoom.</i></p>
+      </li>
+      <li class="blocktext"><b>Tem que pagar pelas apostilas?</b>
+        <p class="blocktext"><i>Não. O curso é totalmente gratuito e não há material impresso em papel. Todos os materiais serão disponibilizados <b>online</b> 
+          e encaminhados nos próprios grupos do WhatsApp.</i></p>
+          <p class="blocktext"><i>Também já existem muitas aulas gravadas no YouTube. Somente em um canal, já foram resolvidas
+            mais de 1.000 (mil) questões de todos os Colégios Militares (CM) do país, tendo em vista que quem deseja passar no concurso do CM terá que
+          estudar muito, mesmo fora das aulas.</i></p>
+          <p class="blocktext"><i>Então, os alunos poderão rever essas matérias e as questões resolvidas.</i></p>
+      </li>
+      <li class="blocktext"><b>Quem são os professores?</b>
+        <p class="blocktext"><i>Somos professores da UFMS, IFMS, médicos, engenheiros, advogados e alunos de universidades públicas.</i></p>
+      </li>
+      <li class="blocktext"><b>Por quê vocês estão dandos essas aulas de forma gratuita?</b>
+        <p class="blocktext"><i>Pela prática do bem. No mundo de hoje, nós precisamos estender as mãos uns aos outros e servir com gentileza,
+           como nos ensinou Jesus.
+        </i></p>
+      </li>
+      <li class="blocktext"><b>Há a necessidade de algum cadastro prévio?</b>
+        <p class="blocktext"><i>Não. Nós abolimos o nosso cadastro em função da grande procura de alunos. Só haverá necessidade de algum
+          cadastro para os alunos aprovados nos diversos colégios (CM ou colégios particulares parceiros).
+        </i></p>
+      </li>
+      <li class="blocktext"><b>O que é mais importante neste momento?</b>
+        <p class="blocktext"><i>Neste momento de pandemia, o mais importante é permanecerem conectados aos grupos do WhatsApp das respectivas
+          turmas, para receberem os links das aulas online.
+        </i></p>
+      </li>
+      <li class="blocktext"><b>Quais são as matérias?</b>
+        <p class="blocktext"><i>Matemática e Língua Portuguesa (Gramática, Redação e Interpretação de Textos).</i></p>
+      </li>
+      <li class="blocktext"><b>É necessário que o aluno possua RG e/ou CPF?</b>
+        <p class="blocktext">Para realizar os Cursos Preparatórios do Instituto Ser Integral, não.</p>
+        <p class="blocktext">Porém, será necessário para a realização dos concursos do CM e da Escola General Osório (EGO).</p>
+        <p class="blocktext">Sem o RG e o CPF o aluno não consegue efetuar a inscrição nestes concursos.</p>
+      </li>
+    </ol>
   </div>
 </body>
 
