Corrigidos erros de Português, incluída legenda para FAQ  e inserida seta do tipo 'voltar para o topo' na página de Ajuda.

--- a/ajuda.html
+++ b/ajuda.html
@@ -77,7 +77,7 @@
       <li class="blocktext"><b>Quem são os professores?</b>
         <p class="blocktext"><i>Somos professores da UFMS, IFMS, médicos, engenheiros, advogados e alunos de universidades públicas.</i></p>
       </li>
-      <li class="blocktext"><b>Por quê vocês estão dandos essas aulas de forma gratuita?</b>
+      <li class="blocktext"><b>Por quê vocês estão dando essas aulas de forma gratuita?</b>
         <p class="blocktext"><i>Pela prática do bem. No mundo de hoje, nós precisamos estender as mãos uns aos outros e servir com gentileza,
            como nos ensinou Jesus.
         </i></p>
@@ -101,6 +101,11 @@
         <p class="blocktext">Sem o RG e o CPF o aluno não consegue efetuar a inscrição nestes concursos.</p>
       </li>
     </ol>
+    <h6 class="signature">Instituto Ser Integral</h6>
+    <p class="blocktext">*FAQ = <i>Frequently Asked Questions</i> ou Perguntas Efetuadas Frequentemente.</p>
+    <div style="position:fixed; bottom:0px; right:30px;">
+      <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
+    </div>
   </div>
 </body>
 
