Incluído o texto 'A Barata', de Fernando Sabino, no Blog.

--- a/blog.html
+++ b/blog.html
@@ -49,6 +49,24 @@
     </div>
   </nav>
   <div class="container">
+    <p class="blocktext">Campo Grande, 13 de abril de 2021</p>
+    <h3 class="blog">A Barata</h3>
+    <p class="blocktext">Magricela como Olívia Palito, mulher do Popeye, parecia um galho seco dentro do vestido escuro. Era antipática e ranzinza. Usava óculos de lentes grossas: não enxergava direito, vivia confundindo um aluno a outro.</p>
+    <p class="blocktext">A aula de religião não contava ponto nem influía na nossa média, mas a diretora nos obrigava a frequentar.</p>
+    <p class="blocktext">Um dia apareceu uma barata na sala de aula. Descobrimos então que Dona Risoleta tinha horror a baratas: soltou um grito, apontou a bichinha com o dedo trêmulo e subiu na cadeira, pedindo que matássemos. Era uma barata grande, daquelas cascudas.</p>
+    <p class="blocktext">A classe inteira se mobilizou para matá-la. Foi aquele alvoroço: empurrões, cotoveladas, pontapés, risos e gritaria, todos querendo atingi-la primeiro. E a coitada, feito barata tonta, escapando no chão. Até que, de repente, tive a sorte de dar com ela passando a correr entre meus pés - e esmigalhei-a em uma pisada só.</p>
+    <p class="blocktext">Fui aclamado como herói, vejam só: herói por ter matado uma barata. Até Dona Risoleta me agradeceu trêmula, descendo da cadeira e me dando um beijo na testa. Esse beijo a turma não me perdoou, durante muito tempo fui vítima da maior gozação: diziam que dona Risoleta estava querendo me namorar.</p>
+    <p class="blocktext">Deste episódio nasceu uma brincadeira que passamos a fazer em toda aula de religião, duas vezes por semana. Alguém trazia uma barata viva dentro de uma caixa de fósforos vazia, para soltar na sala de aula entre as carteiras, até que um aluno denunciasse a sua presença. Quando não era a dona Risoleta que soltava um gritinho:</p>
+    <p class="blocktext">- Uma barata!</p>
+    <p class="blocktext">(...)</p>
+    <p class="blocktext">Um dia ela foi reclamar providências da diretora, dizendo que o prédio era velho, estava precisando de uma limpeza em regra, vivia cheio de baratas. Naquele tempo não havia dedetização, de modo que a diretora não tomou providência nenhuma, nunca tinha visto barata na escola. Aquilo eram fricotes de Dona Risoleta.</p>
+    <p class="blocktext">E a coisa ficou por isso mesmo, de vez em quando aparecendo uma baratinha, para alegrar a aula de religião. Houve uma que subiu pela perna da professora e foi se esconder debaixo da sua roupa. A mulher deu um pulo de três metros de altura se sacudindo toda, aos berros, como se estivesse louca, por pouco não se atirou pela janela.</p>
+    <p class="blocktext">Até que o Dico um dia esqueceu na carteira uma caixa de fósforos com a barata dentro. Sem saber para que diabo aquele aluno havia de ter trazido fósforos de casa, se todos nós éramos crianças, não fumávamos, dona Risoleta, curiosa, abriu a caixa. A barata saltou em sua cara num voo aflito, largando pedaços de asas no ar, e se refugiou nos seus cabelos. A coitada só faltou desmaiar de susto. Saiu correndo feito doida com barata e tudo e foi nos denunciar à diretora.</p>
+    <p class="blocktext">O Dico acabou suspenso por uma semana, como responsável por todas as baratas que já tinham aparecido. Com isso, ficou sob ameaça de perder o ano, por falta de frequência.</p>
+    <p class="blocktext">Fernando Sabino, in: O Menino no Espelho. Rio de Janeiro, Record. 1982, 2ª.ed., pp. 112-115.</p>
+    <p class="blocktext">Fonte: https://armazemdetexto.blogspot.com/ 2018/05/texto-um-dia-em-sala-de-aula- fernando.html</p>
+    <p class="blocktext"></p>
+    <hr>
     <p class="blocktext">Campo Grande, 6 de abril de 2021</p>
     <h3 class="blog">Homem Olhando o Mar</h3>
     <p class="blocktext">Ela carregava a pasta contra o peito, e caminhava com estudada displic&ecirc;ncia ― o que, de certo modo, disfar&ccedil;ava a deseleg&acirc;ncia do uniforme. Deu uma corridinha para atravessar a rua e depois se compenetrou, tentando fazer-se adulta. Logo se distra&iacute;a, de vitrine em vitrine, com seu pr&oacute;prio corpo que passava, refletido no vidro ― &agrave;s vezes estacando para olhar um vestido, uma bolsa, um sapato. B&aacute;rbaro, murmurava.&nbsp;</p>
