Correção pontual de crédito do texto da versão anterior.

--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
     <p class="blocktext">E a coisa ficou por isso mesmo, de vez em quando aparecendo uma baratinha, para alegrar a aula de religião. Houve uma que subiu pela perna da professora e foi se esconder debaixo da sua roupa. A mulher deu um pulo de três metros de altura se sacudindo toda, aos berros, como se estivesse louca, por pouco não se atirou pela janela.</p>
     <p class="blocktext">Até que o Dico um dia esqueceu na carteira uma caixa de fósforos com a barata dentro. Sem saber para que diabo aquele aluno havia de ter trazido fósforos de casa, se todos nós éramos crianças, não fumávamos, dona Risoleta, curiosa, abriu a caixa. A barata saltou em sua cara num voo aflito, largando pedaços de asas no ar, e se refugiou nos seus cabelos. A coitada só faltou desmaiar de susto. Saiu correndo feito doida com barata e tudo e foi nos denunciar à diretora.</p>
     <p class="blocktext">O Dico acabou suspenso por uma semana, como responsável por todas as baratas que já tinham aparecido. Com isso, ficou sob ameaça de perder o ano, por falta de frequência.</p>
-    <p class="blocktext">Fernando Sabino, in: O Menino no Espelho. Rio de Janeiro, Record. 1982, 2ª.ed., pp. 112-115.</p>
+    <p class="blocktext">Fernando Sabino, in: O Menino no Espelho. Rio de Janeiro, Record, 1982, 2ª.ed., pp. 112-115.</p>
     <p class="blocktext">Fonte: https://armazemdetexto.blogspot.com/ 2018/05/texto-um-dia-em-sala-de-aula- fernando.html</p>
     <p class="blocktext"></p>
     <hr>
