--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     <li class="nav-item">
                         <a class="nav-link" href="africa.html">África - Ensino Médio</a>
                     </li>
-                    <li>
-                        <a class="nav-link" href="videos-fraternos.html">Vídeos Fraternos</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="espiritismo.html">Espiritismo</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
                 <div class="carousel-caption">
                     <h1 class="display-2"></h1>
                     <h3>Vídeos Fraternos</h3>
-                    <a href="videos-fraternos.html" class="btn btn-primary btn-sm" role="button" title="Clique aqui">VER VÍDEOS</a>
+                    <a href="espiritismo.html" class="btn btn-primary btn-sm" role="button" title="Clique aqui">VER VÍDEOS</a>
                 </div>
             </div>
         </div>
@@ -276,24 +276,38 @@
         <hdr></hdr>
         <!-- Footer -->
         <footer>
-            <div class="row text-center padding">
-                <div class="col-xs-12 col-sm-6 col-md-6">
-                    <ul class="footer">
-                        <li><a href="inscricao.html">Inscreva-se</a></li>
-                        <li><a href="quem-somos.html">Quem Somos</a></li>
-                        <li><a href="fale-conosco.html">Fale Conosco</a></li>
-                    </ul>
+            <div class="container-fluid padding">
+              <div class="row text-center">
+                <div class="col-md-4">
+                  <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
+                  <hr>
+                  <h5>Fale Conosco</h5>
+                  <hr>
+                  <p>projetoavante00@gmail.com</p>
+                  <p>Avenida Gualter Barbosa, 1.206</p>
+                  <p>Campo Grande, MS, 79.015-480</p>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-                    <ul class="footer">
-                        <li><a href="ajuda.html">Ajuda</a></li>
-                        <li><a href="patrocinadores.html">Seja um Patrocinador</a></li>
-                        <li><a href="https://www.linkedin.com/in/alanderson-americo/
-                            " target="_blank">@author</a></li>
-                    </ul>
+                <div class="col-md-4">
+                  <hr>
+                  <h5>Horários (BSB)</h5>
+                  <hr>
+                  <p>Segunda, Quarta e Sexta</p>
+                  <p>8h - 11h40min | 14h - 17h40min</p>
                 </div>
+                <div class="col-md-4">
+                  <hr>
+                  <h5>Tópicos</h5>
+                  <hr>
+                  <p><a href="ajuda.html">Ajuda</a></p>
+                  <p><a href="quem-somos.html">Quem Somos</a></p>
+                  <p><a href="inscricao.html">Inscreva-se</a></p>
+                  <p><a href="patrocinadores.html">Seja um Patrocinador</a></p>
+                  <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
+                  <p></p>
+                </div>
+              </div>
             </div>
-        </footer>
+          </footer>
     </div>
     <div style="position:fixed; bottom:0px; left:30px;">
         <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
