--- a/blog.html
+++ b/blog.html
@@ -41,9 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" href="africa.html">África - Ensino Médio</a>
           </li>
-          <li>
-            <a class="nav-link" href="videos-fraternos.html">Vídeos Fraternos</a>
-          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="espiritismo.html">Espiritismo</a>
+        </li>
         </ul>
       </div>
     </div>
@@ -64,7 +64,7 @@
     <p class="blocktext">Até que o Dico um dia esqueceu na carteira uma caixa de fósforos com a barata dentro. Sem saber para que diabo aquele aluno havia de ter trazido fósforos de casa, se todos nós éramos crianças, não fumávamos, dona Risoleta, curiosa, abriu a caixa. A barata saltou em sua cara num voo aflito, largando pedaços de asas no ar, e se refugiou nos seus cabelos. A coitada só faltou desmaiar de susto. Saiu correndo feito doida com barata e tudo e foi nos denunciar à diretora.</p>
     <p class="blocktext">O Dico acabou suspenso por uma semana, como responsável por todas as baratas que já tinham aparecido. Com isso, ficou sob ameaça de perder o ano, por falta de frequência.</p>
     <p class="blocktext">Fernando Sabino, in: O Menino no Espelho. Rio de Janeiro, Record, 1982, 2ª.ed., pp. 112-115.</p>
-    <p class="blocktext">Fonte: https://armazemdetexto.blogspot.com/ 2018/05/texto-um-dia-em-sala-de-aula- fernando.html</p>
+    <p class="blocktext">Fonte: https://armazemdetexto.blogspot.com/2018/05/texto-um-dia-em-sala-de-aula-fernando.html</p>
     <p class="blocktext"></p>
     <hr>
     <p class="blocktext">Campo Grande, 6 de abril de 2021</p>
@@ -85,7 +85,7 @@
     <p class="blocktext">― Tive um dia atarefad&iacute;ssimo, hoje.&nbsp;</p>
     <p class="blocktext">Olhou a filha, meio ressabiado, mas ela j&aacute; lhe devolvia o olhar, com ternura. Uma ternura de c&uacute;mplice.</p>
     <p class="blocktext">Fernando Sabino, in: A Inglesa Deslumbrada. Rio de Janeiro, Sabiá. 1967, pp. 7-9.</p>
-    <p class="blocktext">Fonte: https://cronicabrasileira.org.br/ cronicas/13162/homem-olhando-o-mar</p>
+    <p class="blocktext">Fonte: https://cronicabrasileira.org.br/cronicas/13162/homem-olhando-o-mar</p>
     <hr>
     <p class="blocktext">Campo Grande, 16 de fevereiro de 2021</p>
     <h3 class="blog">Como melhorar a sua redação</h3>
@@ -115,6 +115,41 @@
     <h6 class="signature">Professora Alexandra Galvão</h6>
     <h6 class="signature">Coordenadora de Língua Portuguesa</h6>
   </div>
+  <footer>
+    <div class="container-fluid padding">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
+          <hr>
+          <h5>Fale Conosco</h5>
+          <hr>
+          <p>projetoavante00@gmail.com</p>
+          <p>Avenida Gualter Barbosa, 1.206</p>
+          <p>Campo Grande, MS, 79.015-480</p>
+        </div>
+        <div class="col-md-4">
+          <hr>
+          <h5>Horários (BSB)</h5>
+          <hr>
+          <p>Segunda, Quarta e Sexta</p>
+          <p>8h - 11h40min | 14h - 17h40min</p>
+        </div>
+        <div class="col-md-4">
+          <hr>
+          <h5>Tópicos</h5>
+          <hr>
+          <p><a href="ajuda.html">Ajuda</a></p>
+          <p><a href="quem-somos.html">Quem Somos</a></p>
+          <p><a href="inscricao.html">Inscreva-se</a></p>
+          <p><a href="patrocinadores.html">Seja um Patrocinador</a></p>
+          <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div style="position:fixed; bottom:0px; right:30px;">
+    <a href="#" title="Voltar para o topo">Voltar para o topo<i class="fas fa-arrow-alt-circle-up"></i></a>
   <div style="position:fixed; bottom:0px; right:30px;">
     <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
   </div>
