--- a/patrocinadores.html
+++ b/patrocinadores.html
@@ -41,9 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" href="africa.html">África - Ensino Médio</a>
           </li>
-          <li>
-            <a class="nav-link" href="videos-fraternos.html">Vídeos Fraternos</a>
-          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="espiritismo.html">Espiritismo</a>
+        </li>
         </ul>
       </div>
     </div>
@@ -51,6 +51,40 @@
   <div class="grid-container">
     <h1>EM DESENVOLVIMENTO</h1>
   </div>
+  <footer>
+    <div class="container-fluid padding">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
+          <hr>
+          <h5>Fale Conosco</h5>
+          <hr>
+          <p>projetoavante00@gmail.com</p>
+          <p>Avenida Gualter Barbosa, 1.206</p>
+          <p>Campo Grande, MS, 79.015-480</p>
+        </div>
+        <div class="col-md-4">
+          <hr>
+          <h5>Horários (BSB)</h5>
+          <hr>
+          <p>Segunda, Quarta e Sexta</p>
+          <p>8h - 11h40min | 14h - 17h40min</p>
+        </div>
+        <div class="col-md-4">
+          <hr>
+          <h5>Tópicos</h5>
+          <hr>
+          <p><a href="ajuda.html">Ajuda</a></p>
+          <p><a href="quem-somos.html">Quem Somos</a></p>
+          <p><a href="inscricao.html">Inscreva-se</a></p>
+          <p><a href="patrocinadores.html">Seja um Patrocinador</a></p>
+          <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <div style="position:fixed; bottom:0px; right:30px;">
+    <a href="#" title="Voltar para o topo">Voltar para o topo<i class="fas fa-arrow-alt-circle-up"></i></a>
 </body>
-
 </html>
