--- a/index.html
+++ b/index.html
@@ -239,12 +239,12 @@
             <!-- VÍDEO 10 -->
             <div class="col-xs-12 col-sm-6 col-md-3">
                 <div  class="card text-white bg-danger">
-                    <iframe src="https://www.youtube.com/embed/QM_7m7xws4Y" title="Agradecimento" 
+                    <iframe src="https://www.youtube.com/embed/duQHuqmQyrc" title="Agradecimento" 
                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                     gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">Agradecimento</h6>
-                        <p class="card-text">Leia (Mãe da Ana Beatriz) | EGO - 6º Ano</p>
+                        <p class="card-text">Daphiny | EGO - 7º Ano</p>
                     </div>
                 </div>
             </div>
