Criada a página Colaboradores a partir da Filantropia. Incluído o forumlário de pesquisa de Staff na página Colaboradores.

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -49,13 +49,14 @@
     </div>
   </nav>
   <div class="grid-container">
-    <h1>EM DESENVOLVIMENTO</h1>
+    <p class="blocktext">*Para preenchimento exclusivo da Administração do Instituto Ser Integral.</p>
+    <p><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfBVvyc2OwykE07J-Z96bhK57iwqQdO12y5c7lH6MF7UXIurA/viewform?embedded=true" width="640" height="1370" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe></p>
   </div>
   <footer>
     <div class="container-fluid padding">
       <div class="row text-center">
         <div class="col-md-4">
-          <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
+          
           <hr>
           <h5>Fale Conosco</h5>
           <hr>
@@ -78,8 +79,8 @@
           <p><a href="quem-somos.html">Quem Somos</a></p>
           <p><a href="inscricao.html">Inscreva-se</a></p>
           <p><a href="patrocinadores.html">Seja um Patrocinador</a></p>
+          <p><a href="colaboradores.html">Colaboradores</a></p>
           <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
-          <p></p>
         </div>
       </div>
     </div>
